--- a/index.html
+++ b/index.html
@@ -693,9 +693,8 @@
         <!-- <a href="call_pitch_video.mp4">Download Video (MP4)</a> -->
         <div class="language-options">
           <a href="audio/english/english.call pitch.zip">Download English Audio (MP3)</a>
-          <a href="audio/call_pitch_tamil.mp3">Download Tamil Audio (MP3)</a>
-          <a href="audio/call_pitch_telugu.mp3">Download Telugu Audio (MP3)</a>
-          <a href="audio/call_pitch_hindi.mp3">Download Hindi Audio (MP3)</a>
+          <a href="audio/tamil.zip">Download Tamil Audio (MP3)</a>
+          <a href="audio/telugu.zip">Download Telugu Audio (MP3)</a>
         </div>
       </div>
     </div>
