--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
         <a href="Internship call pitch (1).pdf">Download Document (PDF)</a>
         <!-- <a href="call_pitch_video.mp4">Download Video (MP4)</a> -->
         <div class="language-options">
-          <a href="audio/english/english.call pitch.zip">Download English Audio (MP3)</a>
+          <a href="audio/english.call pitch.zip">Download English Audio (MP3)</a>
           <a href="audio/tamil.zip">Download Tamil Audio (MP3)</a>
           <a href="audio/telugu.zip">Download Telugu Audio (MP3)</a>
         </div>
